--- a/modules/core/assets/scss/components/select_row_modal.scss
+++ b/modules/core/assets/scss/components/select_row_modal.scss
@@ -177,6 +177,7 @@
   align-items: center;
   margin-top: auto;
   padding: 0 10px;
+  position: relative;
   height: 44px;
   background-color: $color-neutral-50;
   border-top: solid 1px $color-neutral-200;
