--- a/modules/core/assets/scss/components/views/grid.scss
+++ b/modules/core/assets/scss/components/views/grid.scss
@@ -226,7 +226,7 @@
 }
 
 .grid-view__row-warning {
-  @include absolute(auto, auto, -20px, 0);
+  @include absolute(-22px, auto, auto, 0);
   @include fixed-height(20px, 12px);
 
   z-index: 1;
