--- a/modules/core/assets/scss/good-table.scss
+++ b/modules/core/assets/scss/good-table.scss
@@ -7,6 +7,11 @@
     font-weight: initial !important;
   }
 
+  td {
+    padding: 2px 10px !important;
+    vertical-align: inherit !important;
+  }
+
   &.bordered {
     th {
       background-color: #f5f5f5;
