--- a/modules/core/assets/scss/helpers.scss
+++ b/modules/core/assets/scss/helpers.scss
@@ -8,6 +8,10 @@
   display: none;
 }
 
+.visible {
+  visibility: visible !important;
+}
+
 .visibility-hidden {
   visibility: hidden;
   transform: translateX(-10000px) translateY(-10000px);
