--- a/modules/core/assets/scss/helpers.scss
+++ b/modules/core/assets/scss/helpers.scss
@@ -41,6 +41,10 @@
   color: $color-error-500 !important;
 }
 
+.color-primary-dark {
+  color: $color-primary-900 !important;
+}
+
 .margin-top-0 {
   margin-top: 0 !important;
 }
